--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Discord bot that scrapes data from Eventhubs for tierlist information",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [
     "smashbrothers"
